FINERACT-2326: Minor changes to resolve issues after upgrade